# MeshLib

./: CMakeLists.txt  MeshLibConfig.cmake.in  MeshLibConfigVersion.cmake.in  README.md  build.sh
CMake/: FindAssimp.cmake  FindJsonCpp.cmake  MeshLibConfig.cmake.in  installWindows.cmake
include/: Common.hxx  GLSLTypeStore.hxx  Material.hxx  Mesh.hxx  MeshLibEXPORT.hxx  Model.hxx  ModelLoader.hxx  Primitives.hxx  Texture.hxx
material/: MTLToJson.py  material_example.json
modules/: CMakeLists.txt  image_processing.cxx  image_processing.hxx  image_processing.i
src/: GLSLTypeStore.cxx  Material.cxx  Mesh.cxx  Model.cxx  ModelLoader.cxx  Primitives.cxx  Texture.cxx
tests/: computeNormalMap.cxx  loading.cxx
